web/css/styles.css
/* ============================== */
/* ! Layout for desktop version   */
/* ============================== */

@import url(http://fonts.googleapis.com/css?family=Pinyon+Script);
@import url(http://fonts.googleapis.com/css?family=Mr+Dafoe);

body {
    text-align: center;
    font-family: arial;
    background-color: #eee;
    color: #333;
}
h1 {
    font-family: 'Pinyon Script', cursive;
    color: #81ba5d;
    font-size: 60px;
    font-weight: 600;
    text-shadow: 1px 1px 1px #ddd;
    line-height: 60px;
    border-bottom: 3px dotted #ddd;
    padding: 10% 0 2% 0;
}

h2 {
    font-size: 200px;
    line-height: 250px;
    text-transform: capitalize;
    text-shadow: 1px 1px 1px #ddd;
    font-weight: 100;
    font-family: 'Mr Dafoe', cursive;
    padding: 2% 0 5% 0;
    border-bottom: 3px dotted #ddd;
}

h3 {
    color: #333;
    font-size: 20px;
    padding: 10px 0 0 0;
    font-weight: 100;
    text-align: left;
    padding: 20px 0 5px 0;

}

p {
    text-align: left;
    font-size: 12px;
    line-height: 18px;
    padding: 0 35px 20px 0;
}

a, span.red {
    color: #eb363b;
    text-decoration: none;
}

h2.yes {
    color: #81ba5d;
}

h2.no {
    color: #eb363b;
}

.center {
    text-align: center;
}

#time {
    visibility: hidden;
    display: none;
}

.quick-links {
  min-height: 30px;
  margin: 0;
  padding: 5px 20px;
  list-style: none;
  text-align: center;
  overflow: hidden;
}
.quick-links:first-child {
  min-height: 0;
}
.quick-links li {
  display: inline;
  margin: 0 8px;
  color: #999;
}
.quick-links .github-btn,
.quick-links .tweet-btn,
.quick-links .follow-btn {
  position: relative;
  top: 5px;
}

.github-btn {
    height: 20px;
    border: 0;
}
.github-btn.w112 {
    width: 112px;
}

.github-btn.w98 {
    width: 98px;
}

/* ============================= */
/* ! Layout for mobile version   */
/* ============================= */

@media handheld, only screen and (max-width: 767px) {

    body {

    }

    h1 {
        font-size: 50px;
    }

    h2 {
        font-size: 150px;
        line-height: 200px;
        padding: 2% 0 5% 0;
    }

}

@media handheld, only screen and (max-width: 550px) {

    body {

    }

    h1 {
        font-size: 24px;
        line-height: 26px;
        padding-left: 0;
        padding-right: 0;
        margin: 0;
    }

    h2 {
        font-size: 100px;
        line-height: 150px;
        padding: 2% 0 5% 0;
    }

    h3 {
        font-size: 18px;
    }

}


/* ========================================== */
/* ! Provide higher res assets for iPhone 4   */
/* ========================================== */

@media only screen and (-webkit-min-device-pixel-ratio: 2) {

    /*	.logo {
         background: url(logo2x.jpg) no-repeat;
         background-size: 212px 303px;
     }*/

}

